feat: add arbitrage api
